clusters/svc.pt.soeren.cloud/k8s-infra/cilium-config/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: "192.168.73.21"            # <-- same node IP
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.svc.pt.soeren.cloud"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: gateway-cert
      allowedRoutes:
        namespaces:
          from: All
